<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.example.panjirp.halalmui"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/halal"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="20dp"
            android:text="@string/cari"
            />

        <Spinner
            android:id="@+id/static_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputcari" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@color/colorButton"
            android:text="@string/buttoncari"
            android:onClick="send"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/semua"
                android:textSize="20dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:id="@+id/click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:onClick="onClick"
                android:clickable="true"
                android:textStyle="bold"
                android:text="@string/semua2"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>